# test-final-tekbot

./: .gitignore  README.md  lancer_demo_auto.sh  requirements.txt  schema.sql
.github/workflows/: python-app.yml
TekBot/: __init__.py  controller.py
TekBot/static/: script.js  style.css
TekBot/templates/: index.html
flask-app/: README.md
flask-app/TekBot/templates/: index.html
install/: local_setup.sh  setup.sh
install/demo_tri_pkg/lib/demo_tri_pkg/: demo_tri
install/demo_tri_pkg/share/demo_tri_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my-test-package/share/my-test-package/: package.sh
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/demo_tri_pkg/lib/demo_tri_pkg/: demo_tri
ros2_ws/install/demo_tri_pkg/share/demo_tri_pkg/: package.dsv  package.ps1  package.sh  package.xml
ros2_ws/log/: latest_build
ros2_ws/src/demo_tri_pkg/: package.xml  setup.cfg  setup.py
src/demo_tri_pkg/: CMakeLists.txt
src/demo_tri_pkg/demo_tri_pkg/: demo_tri.py
test-final-tekbot/TekBot/: __init__.py
test-final-tekbot/TekBot/static/: script.js  style.css
test-final-tekbot/install/: setup.sh
test-final-tekbot/install/my-test-package/share/my-test-package/: package.sh
test-final-tekbot/log/: latest_build
