<?xml version="1.0"?>
<package format="3">
  <name>demo_tri_pkg</name>
  <version>0.0.1</version>
  <description>Demo de tri ROS2</description>
  <maintainer email="votremail@example.com">lory</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
